<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_air_level"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/et_tel"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:hint="@string/login_hint"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/gray"
        android:inputType="phone|number"
        android:maxLength="11"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/et_passWord"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:hint="@string/login_pass"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/tv_error"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_error"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/red"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:layout_width="256dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@android:color/holo_blue_light"
        />

    <TextView
        android:text="@string/login_question"
        android:textColor="@android:color/holo_blue_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:textSize="14sp"
        android:id="@+id/tv_question" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">
    <TextView
        android:text="@string/first_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/register_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginLeft="10dp"
        android:id="@+id/tv_goRegister" />
</LinearLayout>
</LinearLayout>