<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:src="@mipmap/ic_air_level" />

    <LinearLayout
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_tel"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:hint="@string/login_hint"
            android:textColorHint="@color/gray"
            android:maxLength="11"
            android:inputType="phone|number"
            android:background="@null"
            android:textSize="16sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#aa000000" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/et_code"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:hint="@string/vertification_code"
                android:textColorHint="@color/gray"
                android:maxLength="4"
                android:inputType="number"
                android:background="@null"
                android:textSize="16sp" />
            <Button
                android:id="@+id/sendCode"
                android:layout_width="94dp"
                android:layout_height="40dp"
                android:text="@string/clickGetVerificationCode"
                android:textColor="@color/white"
                android:background="@android:color/holo_blue_light"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#aa000000" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:textColor="@color/white"
        android:background="@android:color/holo_blue_light"
        android:text="@string/register" />


</LinearLayout>