<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/goods_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/k1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/goods_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[3M]3M 口罩9001V型"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/goods_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="¥3.80"
                android:textColor="@android:color/holo_red_light"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_price" />

                <TextView
                    android:id="@+id/post_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5.00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150dp"
                    android:text="@string/sold_num" />

                <TextView
                    android:id="@+id/sold_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="863" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bi" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/goods_prop" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"
                android:layout_marginTop="10dp"
                android:text="防护颗粒物" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
